# SeebeckL

./: .gitignore  CMakeLists.txt
include/: Constants.hpp  DebyeMass.hpp  Distribution.hpp
src/: DebyeMass.cpp
